[gd_scene load_steps=2 format=3 uid="uid://c8qvsjar3vte4"]

[ext_resource type="Script" uid="uid://d8xfvx2yhusc" path="res://scripts/ui/MenuManager.gd" id="1_11hie"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11hie")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -43.0
offset_right = 20.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "GUN"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
text = "new game"

[node name="OptionsButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
text = "options"

[node name="StatsButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
text = "stats"

[node name="ExitButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
text = "quit"

[node name="VersionLabel" type="Label" parent="MenuContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
